# VolAlign

./: .gitignore  INSTALL_GUIDE.md  LICENSE  MANIFEST.in  README.md  __init__.py  alignment_tools.py  config_template.yaml  install.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini  utils.py
.github/workflows/: ci.yml
VolAlign/: __init__.py  alignment_tools.py  distributed_processing.py  epitope_analysis.py  pipeline_orchestrator.py  step_tracker.py  utils.py
examples/: complete_microscopy_pipeline.py  production_epitope_analysis.py  selective_step_pipeline.py
nuclei-viewer/: README.md  check_config.py  start_with_pipeline.py  test_pipeline_integration.py
nuclei-viewer/backend/: requirements.txt  run.py
nuclei-viewer/backend/app/: __init__.py  main.py
nuclei-viewer/backend/app/api/: __init__.py  config.py  data.py  nuclei.py
nuclei-viewer/backend/app/core/: __init__.py  config.py  data_loader.py  data_loader_factory.py  epitope_parser.py  models.py  nuclei_processor.py  pipeline_data_loader.py  shared_state.py  validation.py
nuclei-viewer/config/: default_config.yaml
nuclei-viewer/frontend/: package-lock.json  package.json
nuclei-viewer/frontend/public/: index.html  manifest.json
nuclei-viewer/frontend/src/: App.js  index.css
nuclei-viewer/frontend/src/components/: ChannelControls.jsx  DataLoader.jsx  ImageViewer.jsx  NucleiBrowser.jsx  NucleusDetail.jsx
nuclei-viewer/frontend/src/services/: api.js
nuclei-viewer/scripts/: generate_test_data.py  setup_and_test.py
tests/: __init__.py  test_build.py  test_imports.py
