[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VolAlign"
version = "0.1.0"
description = "A comprehensive Python package for volumetric image alignment, stitching, and processing"
readme = "README.md"
authors = [
    { name = "Mansour Alawi", email = "mansour@xpress.ai" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    # Main git-based dependencies - these take priority and pip will handle their sub-dependencies
    "ExSeq-Toolbox @ git+https://github.com/RuihanZhang2015/ExSeq-Toolbox.git",
    "cellpose @ git+https://github.com/mansouralawi/cellpose.git",
    
    # Distributed processing dependencies (from cellpose distributed_deps)
    dask
    distributed
    dask_image
    dask-cuda
    pyyaml
    zarr
    dask_jobqueue
    bokeh
    pyarrow

    # Version constraints for compatibility
    numpy<2.0.0
    ClusterWrap==1.0.3

    # PyTorch with CUDA 12.4 support
    torch==2.4.*
    torchvision==0.19.*
    torchaudio==2.4.*
    
    # Note: ExSeq-Toolbox will automatically install bigstream and nd2reader forks
    # All other dependencies will be automatically resolved by pip
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/XpressAI/VolAlign"
Repository = "https://github.com/XpressAI/VolAlign"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "build",
    "wheel",
    "black",
    "flake8",
    "mypy"
]
cuda-linux = [
    # Linux-only CUDA dependencies
    "cupy-cuda12x==12.3.0; sys_platform == 'linux'",
    "cucim==23.10.0; sys_platform == 'linux'"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["VolAlign"]